packages/svelte/tests/compiler-errors/samples/css-nesting-selector-root/main.svelte
<style>
	/* valid */
	:global(&) {
		color: blue;
	}
	:global(& div) {
		color: blue;
	}
	:global(&) div {
		color: blue;
	}
	/* error */
	:global(div &) {
		color: blue;
	}
</style>
